# LitQuestion

./: .gitignore  AGENT_HANDOFF.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  windows-build.yml
docs/plans/: side_panel_branching.md
scripts/: gen-icons.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chat.rs  error.rs  lib.rs  main.rs  secrets.rs
src/components/: ChatView.tsx  Composer.tsx  MessageBubble.tsx  SettingsModal.tsx  SidePanel.tsx  Sidebar.tsx  ThreadMinimap.tsx
src/lib/: attachments.ts  avatar.ts  chat.ts  db.ts  modelPresets.ts  settings.ts  summary.ts  tree.ts  types.ts
src/store/: useAppStore.ts
